latest changes from feedback

--- a/packages/site-header/src/scss/_component.scss
+++ b/packages/site-header/src/scss/_component.scss
@@ -33,8 +33,8 @@
     }
 
     @media #{core.$screen-lg-up} {
-      padding-top: core.$space-m;
-      padding-bottom: core.$space-s;
+      padding-top: core.$space;
+      padding-bottom: 0;
     }
   }
 
