--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -641,12 +641,12 @@ body.no-scroll {
       background-image: url(icon-constants.get-icon("standard--chevron-left-sml", core.$uq-purple));
       background-repeat: no-repeat;
       // float: left;
-      width: 1rem;
-      height: 1rem;
+      width: 1.5rem;
+      height: 1.5rem;
       transform: translateY(50%);
       position: absolute;
       left: 1.25rem;
-      top: .75rem;
+      top: core.$space-xs;
     }
   }
 
@@ -656,12 +656,12 @@ body.no-scroll {
       content: "";
       background-image: url(icon-constants.get-icon("standard--chevron-right-sml", core.$uq-purple));
       background-repeat: no-repeat;
-      width: 1rem;
-      height: 1rem;
+      width: 1.5rem;
+      height: 1.5rem;
       transform: translateY(50%);
       position: absolute;
       right: 1.5rem;
-      top: .75rem;
+      top: core.$space-xs;
     }
   }
 
