menu active and hover styles

--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -225,6 +225,10 @@
           border-bottom: 4px solid white;
         }
       }
+
+      & .new-header__main-nav-link--active {
+        border-bottom: 4px solid white;
+      }
     }
   }
 
