fixed border bug for opened site header menu

--- a/packages/site-header/src/scss/_component.scss
+++ b/packages/site-header/src/scss/_component.scss
@@ -241,7 +241,7 @@
         }
 
         &--active,
-        &:hover {
+        &--open {
           > a {
             border-left: 2px solid core.$uq-purple;
 
@@ -251,6 +251,8 @@
             }
           }
         }
+
+
       }
     }
 
