fixed hover state on site-header menu

--- a/packages/site-header/src/scss/_component.scss
+++ b/packages/site-header/src/scss/_component.scss
@@ -240,8 +240,7 @@
           }
         }
 
-        &--active,
-        &--open {
+        &--active {
           > a {
             border-left: 2px solid core.$uq-purple;
 
@@ -253,6 +252,15 @@
         }
 
 
+        
+
+
+      }
+
+      &-link {
+        &:hover {
+          border-bottom: 4px solid core.$uq-purple;
+        }
       }
     }
 
