--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -317,10 +317,11 @@
     @media #{core.$screen-lg-up} {
       // padding-left: core.$space;
       // padding-right: core.$space;
-      margin-left:auto;
-      margin-right:auto;
-      max-width:73.25rem;
+      // margin-left:auto;
+      // margin-right:auto;
+      // max-width:73.25rem;
       text-align: right;
+      @include grid.layout-containment;
     }
   }
 
@@ -388,9 +389,10 @@
     @media #{core.$screen-lg-up} {
       padding-left: core.$space;
       padding-right: core.$space;
-      margin-left:auto;
-      margin-right:auto;
-      max-width:73.25rem;
+      // margin-left:auto;
+      // margin-right:auto;
+      // max-width:73.25rem;
+      @include grid.layout-containment;
     }
 
 
