--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -771,7 +771,11 @@ body.no-scroll {
 
   .uq-site-header__title {
     padding: 1rem 1.5rem;
-    font-size: 1.25rem;
+    font-size: 1rem;
+    font-weight: 500;
+  }
+
+  &__audience-link {
     font-weight: 500;
   }
 
